--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,9 @@
 </body>
 
 </html>
+
+<script src="http://code.jquery.com/jquery-3.1.0.min.js" type="text/javascript"></script>
 <script src="/javascripts/react.js" type="text/javascript"></script>
 <script src="/javascripts/react_dom.js" type="text/javascript"></script>
 <script src="/javascripts/babel.js"></script>
-<script src="/lesson1/component/home.js" type="text/babel"></script>
+<script src="/Lesson5/component/form.jsx" type="text/babel"></script>
