--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,4 +19,4 @@
 <script src="/javascripts/react.js" type="text/javascript"></script>
 <script src="/javascripts/react_dom.js" type="text/javascript"></script>
 <script src="/javascripts/babel.js"></script>
-<script src="/Lesson5/component/form.jsx" type="text/babel"></script>
+<script src="/Lesson8/component/helloworld.jsx" type="text/babel"></script>
